# Modbus-data-collector-to-AWS

./: .gitignore  Dockerfile  LICENSE  run-docker.sh
app/master/: CMakeLists.txt  main.cpp
app/slave/: CMakeLists.txt  include.h
iot_app/: CMakeLists.txt  pub_sub.cpp
iot_app/src/: AwsMqtt5ClientBuilder.cpp  AwsMqtt5ClientBuilder.h  AwsMqtt5SubscriptionManager.cpp  AwsMqtt5SubscriptionManager.h
modbus_app/master/: CMakeLists.txt  main.cpp
modbus_app/master/src/: ModbusMaster.cpp  ModbusMaster.h
modbus_app/slave/: CMakeLists.txt  include.h  main.cpp
